--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div class="max-w-2xl mx-auto p-4">
   <app-search (search)="onSearch($event)"></app-search>
 
+  <app-user-not-found *ngIf="userNotFound" [username]="searchedUsername">
+  </app-user-not-found>
+
   <app-user-card *ngIf="user" [user]="user" class="mt-6"></app-user-card>
 
   <app-followings
