ajustando componente de followings

--- a/frontend/src/app/components/followings/followings.component.html
+++ b/frontend/src/app/components/followings/followings.component.html
@@ -19,7 +19,9 @@
         class="w-12 h-12 rounded-full"
       />
       <div>
-        <p class="font-semibold">{{ user.name || "(sem nome)" }}</p>
+        <p class="font-semibold">
+          {{ user.login }}
+        </p>
         <p class="text-sm text-gray-600">{{ "@" + user.login }}</p>
       </div>
       <a
